--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <div id="navbar-container">
           <ul>
             <li id="onpage"><a href="#">Page 1</a></li>
-            <li><a href="page2.html">Page 2</a></li>
-            <li><a href="page3.html">Page 3</a></li>
+            <li><a href="pg2.html">Page 2</a></li>
+            <li><a href="pg3.html">Page 3</a></li>
           </ul>
         </div>
       </nav>
