--- a/page2.html
+++ b/page2.html
@@ -9,28 +9,28 @@
  </head>
  
  <body>
-    <header>  
-      <nav id="main-navbar">
-        <div id="navbar-container">
-          <ul>
+  <header>
+    <nav id="main-navbar">
+      <div id="navbar-container">
+        <ul>
             <li><a href="index.html">Page 1</a></li>
             <li id="onpage"><a href="#">Page 2</a></li>
-            <li><a href="pg3.html">Page 3</a></li>
-          </ul>
-        </div>
-      </nav>
-    </header>
-    
-    <div id="sidebar">
-      <div id="sidebar-container">
-        <ul>
+            <li><a href="page3.html">Page 3</a></li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+  <div id="sidebar">
+    <div id="sidebar-container">
+      <ul>
           <li><a href="https://www.linkedin.com/">Linkedin</a></li>
           <li><a href="https://www.google.com/">Google</a></li>
           <li><a href="https://basecamp.com/">Basecamp</a></li>
-        </ul>
-      </div>
-   
+      </ul>
     </div>
-  </body>
+   
+  </div>
+  
+</body>
 
 </html>
